--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout">
-  <header class="mdl-layout__header">
+  <header class="mdl-layout__header mdl-color--blue-grey">
     <div class="mdl-layout__header-row">
       <span class="mdl-layout__title">
         Home Page
@@ -20,16 +20,16 @@
   <main id="main" class="mdl-layout__content">
     <div class="an-centered an-main-nav">
         <a class="mdl-navigation__link" href="lab1.html">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button">Lab 1</button>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button mdl-color--blue-grey">Lab 1</button>
         </a>        
         <a class="mdl-navigation__link" href="lab2.html">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button">Lab 2</button>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button mdl-color--blue-grey">Lab 2</button>
         </a>
         <a class="mdl-navigation__link" href="lab3.html">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button">Lab 3</button>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button mdl-color--blue-grey">Lab 3</button>
         </a>
         <a class="mdl-navigation__link" href="lab4.html">
-          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button">Lab 4</button>
+          <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button mdl-color--blue-grey">Lab 4</button>
         </a>
     </div>
   </main>
