--- a/lab2.html
+++ b/lab2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="mdl-layout mdl-js-layout">
-    <header class="mdl-layout__header mdl-color--orange">
+    <header class="mdl-layout__header mdl-color--teal">
       <div class="mdl-layout__header-row">
         <span class="mdl-layout__title">
           Lab 2 - Prediction of values using linear neuron network
@@ -58,7 +58,7 @@
         <div class="mdl-grid">
           <div class="mdl-cell mdl-cell--1-col"></div>
           <div class="mdl-cell mdl-cell--1-col">
-            <button id="start" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button">Start</button>
+            <button id="start" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored an-main-nav-button mdl-color--teal">Start</button>
           </div>
         </div>
       </div>
